--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.18.35",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.2",
+        "pusher/pusher-php-server": "^4.1",
         "spatie/laravel-permission": "^3.17",
         "webpatser/laravel-uuid": "^3.0",
         "yajra/laravel-datatables": "^1.5"
